# gke-enterprise-demo

./: .bazelrc  .gitignore  BUILD.bazel  CODE-OF-CONDUCT.md  Elasticsearch-Upgrade.md  Jenkinsfile  Makefile  README-QWIKLABS.md  README.md  WORKSPACE  cloud-create.sh  cloud-destroy.sh  configure.sh  create.sh  expose-ui.sh  expose.sh  load-shakespeare.sh  main.tf  on-prem-create.sh  on-prem-destroy.sh  policy.sh  provider.tf  teardown.sh  upgrade-elasticsearch.sh
elasticsearch/: Elasticsearch-Upgrade.md
elasticsearch/data/: mappings.json
elasticsearch/manifests/: clusterrolebinding.yaml  configmap.yaml  es-data-stateful.yaml  es-data-svc.yaml  es-discovery-svc.yaml  es-ingest-svc.yaml  es-ingest.yaml  es-master-stateful.yaml  es-master-svc.yaml  es-master.yaml  es-svc.yaml
hack/: BUILD.bazel  common.sh  verify-boilerplate.sh  verify-gofmt.sh
manifests/: clusterrole.yaml  es-client.yaml  es-data-pdb.yaml  es-data-sc.yaml  es-discovery-svc.yaml  es-master-pdb.yaml  es-svc.yaml  service-account.yaml
modules/datacenter/: main.tf  outputs.tf
policy/: cloud-network-policy.yaml  on-prem-network-policy.yaml
pyrios/: BUILD.bazel  Dockerfile  Makefile  cloudbuild-pso.yaml  cloudbuild.yaml  deployment.yaml  main.go
pyrios-ui/: BUILD.bazel  Dockerfile  Makefile  cloudbuild-pso.yaml  cloudbuild.yaml  main.go
pyrios-ui/manifest-templates/: BUILD.bazel  deployment.yaml
pyrios-ui/manifests/: deployment.yaml
pyrios-ui/static/: index.html  pricing.css
pyrios/manifest-templates/: BUILD.bazel  deployment.yaml
pyrios/manifests/: deployment.yaml  service.yaml
scripts/: cloud-create.sh  cloud-destroy.sh  common-functions.sh  configure.sh  create.sh  expose-dev.sh  expose-staging.sh  expose-ui-dev.sh  expose-ui-staging.sh  expose-ui.sh  expose.sh  get-gcloud-account.sh  load-shakespeare.sh  on-prem-create.sh  on-prem-destroy.sh  teardown.sh  upgrade-elasticsearch.sh  validate.sh  wait-on-pyrios.sh
scripts/deploy_env/: BUILD.bazel  README.md  deploy_cluster.sh  deploy_repo.sh
terraform/: dev.tf  main.tf  provider.tf  staging.tf  variables.tf  versions.tf
terraform/modules/datacenter/: main.tf  variables.tf
test/: BUILD.bazel  common.sh  make.sh  update-header.sh  verify-boilerplate.sh  verify-gofmt.sh  verify_boilerplate.py
test/boilerplate/: boilerplate.py  boilerplate.yml.txt
