# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# Load docker rules for go_image
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

# Load k8s rules
load("@k8s_deploy//:defaults.bzl", "k8s_deploy",)
load("@k8s_service//:defaults.bzl", "k8s_service",)
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

# Rule to build pyrios and create the container
go_image(
    name = "app_image",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-enterprise-demo/pyrios",
    deps = [
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        ],
)

# Rule for pyrios deployment manifest
k8s_deploy(
    name = "pyrios-deployment",
    cluster = "$(cluster)",
    context = "$(cluster)",
    image_chroot = "$(repo)",
    images = {
        "pyrios:do_not_delete": ":app_image",
    },
    template = "//pyrios/manifest-templates:deployment.yaml",
)

# Rule for pyrios service
k8s_service(
    name = "pyrios-service",
    cluster = "$(cluster)",
    context = "$(cluster)",
    template = "//pyrios/manifest-templates:service.yaml",
)

# Rule for pyrios objects
k8s_objects(
    name = "k8s",
    objects = [
        ":pyrios-deployment",
        ":pyrios-service",
    ],
)
