package(default_visibility = ["//visibility:public"])

sh_test(
    name = "verify-boilerplate",
    srcs = ["verify-boilerplate.sh"],
    tags = ["manual"],
)

sh_test(
    name = "verify-gofmt",
    srcs = ["verify-gofmt.sh"],
    tags = ["manual"],
)

test_suite(
    name = "verify-all",
    tags = ["manual"],
    tests = [
        "verify-boilerplate",
        "verify-gofmt",
    ],
)
